--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
-cmake_minimum_required(VERSION 3.7)
+cmake_minimum_required(VERSION 3.11.3)
+
+set(CMAKE_CXX_STANDARD 17)
+project(transactor)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread")
 
 add_definitions(-std=c++17)
 
-set(CXX_FLAGS "-Wall")
-set(CMAKE_CXX_FLAGS, "${CXX_FLAGS}")
 
-project(HelloWorld)
+# Find all executables
+file(GLOB project_SRCS src/*.cpp) #src/*.h
 
-add_executable(HelloWorld src/main.cpp)
+# Add project executable
+add_executable(transactor ${project_SRCS})
